[gd_scene load_steps=26 format=3 uid="uid://f4ufc1fr6op8"]

[ext_resource type="Texture2D" uid="uid://22chh13e4h0i" path="res://Art/mystic_woods_free_2.1/sprites/characters/slime.png" id="1_6j2vw"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_cccma"]
[ext_resource type="Resource" uid="uid://2ep76dgo4kd8" path="res://scripts/Enemy_Stats.tres" id="2_pv0fh"]
[ext_resource type="Texture2D" uid="uid://ghxw7s5a3p5d" path="res://Art/health_bar_progress.png" id="3_akq01"]
[ext_resource type="Texture2D" uid="uid://d1d2agyuvluuh" path="res://Art/health_bar_over.png" id="4_gxqac"]
[ext_resource type="Script" path="res://scripts/enemy_health_bar.gd" id="5_xnjpd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xcc8w"]
atlas = ExtResource("1_6j2vw")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj4y8"]
atlas = ExtResource("1_6j2vw")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ahr8"]
atlas = ExtResource("1_6j2vw")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3nkq"]
atlas = ExtResource("1_6j2vw")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eih71"]
atlas = ExtResource("1_6j2vw")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv74l"]
atlas = ExtResource("1_6j2vw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll0jb"]
atlas = ExtResource("1_6j2vw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16ov4"]
atlas = ExtResource("1_6j2vw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6ik1"]
atlas = ExtResource("1_6j2vw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebdic"]
atlas = ExtResource("1_6j2vw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0fdn"]
atlas = ExtResource("1_6j2vw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdojs"]
atlas = ExtResource("1_6j2vw")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajn8"]
atlas = ExtResource("1_6j2vw")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnmx5"]
atlas = ExtResource("1_6j2vw")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfxsk"]
atlas = ExtResource("1_6j2vw")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xbnsb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcc8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj4y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ahr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3nkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eih71")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv74l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll0jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16ov4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ik1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebdic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0fdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdojs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnmx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfxsk")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_he1e5"]
radius = 48.0104

[sub_resource type="CircleShape2D" id="CircleShape2D_wqe8b"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v6aii"]
radius = 9.0

[node name="Enemy" type="CharacterBody2D"]
collision_mask = 7
script = ExtResource("1_cccma")
_enemy_stats = ExtResource("2_pv0fh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xbnsb")
animation = &"death"
frame_progress = 0.0628456
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="detection_shape" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_he1e5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_wqe8b")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D_hitbox" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_v6aii")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="death_cooldown" type="Timer" parent="."]

[node name="Health_Bar" type="TextureProgressBar" parent="."]
offset_left = -10.0
offset_top = -22.0
offset_right = 10.0
offset_bottom = -16.0
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_under = ExtResource("3_akq01")
texture_over = ExtResource("4_gxqac")
texture_progress = ExtResource("3_akq01")
tint_under = Color(0.164706, 0.164706, 0.164706, 1)
tint_over = Color(0.121569, 0.121569, 0.121569, 1)
tint_progress = Color(0.666667, 0, 0, 1)
script = ExtResource("5_xnjpd")

[connection signal="health_loss" from="." to="Health_Bar" method="_on_enemy_health_loss"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="death_cooldown" to="." method="_on_death_cooldown_timeout"]
